Fix gap between header and main section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,11 @@ a{
     font-weight: 600;
 }
 
+.btn-outline-primary:hover{
+    /* box-shadow: 0 0 var(--green-3); */
+    transform: translate3d(.5rem, .5rem, 0);
+}
+
 /* MAIN */
 /* TITLE */
 .pricing-testimonial{
@@ -84,12 +89,13 @@ a{
 .pricing-title{
     margin: 0 auto;
     text-align: center;
-    width: 40%;
+    width: 45%;
 }
 
 .pricing-title > h1{
     font-size: 3rem;
     padding: 0 2.5em;
+    margin-top: 0;
 }
 
 .pricing-title > p{
